--- a/styles/style.css
+++ b/styles/style.css
@@ -560,6 +560,7 @@ label {
     width: 100%;
     height: 100%;
     border: 4xp solid rgba(255, 255, 255, 0.1);
+    border-radius: 1rem;
     margin-bottom: 1.8rem;
 }
    
